# delivery-system

./: .gitignore  README.md
doc/: Component_Diagram.drawio  api_notes.md  lwagner94-DeliverySystem-1.0.0-resolved.yaml
src/: .gitignore  DeliverySystem.sln  docker-compose-.yml  docker-compose-devel.yml  docker-compose-test.yml  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  nginx.conf  run_tests.sh
src/AgentAPI/: AgentAPI.csproj  Dockerfile  IDataAccess.cs  Program.cs  SQLiteDataAccess.cs  Startup.cs
src/AgentAPI/Controllers/: AgentController.cs
src/AgentAPI/Models/: AgentState.cs  AgentStateTable.cs  Coordinates.cs  UserInfo.cs
src/AgentAPI/Properties/: launchSettings.json
src/AgentAPI/Service/: AuthService.cs  IAuthService.cs  IJobService.cs  JobService.cs
src/DeliverySystemLib/: DeliverySystemLib.csproj
src/DeliverySystemLib/Models/: AgentState.cs  AgentStateTable.cs  Coordinates.cs  UserInfo.cs
src/DeliverySystemLib/Service/: AuthService.cs  IAuthService.cs  (+2 more)
src/GeoAPI/: Dockerfile  GeoAPI.csproj  Program.cs  Startup.cs
src/auth/: Cargo.toml  Dockerfile  app.py
src/auth-db/: auth.db
src/auth_rust/: .env  Cargo.toml
src/auth_rust/migrations/: 20210529175209_add-user.sql  20210529191817_add-sessions.sql
src/auth_rust/src/: main.rs  models.rs  routes.rs
src/auth_rust/tests/: api_test.rs
src/demo/: demo.py  demo.ui  requirements.txt  resources.py  usecase_phone.qrc
src/integration-test/: Dockerfile  docker-compose.yml  requirements.txt  startup.sh
src/job/: Dockerfile  requirements.txt
src/job-db/: job.db
(+15 files in other folders)
